--- a/UO_TP_1.ipynb
+++ b/UO_TP_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIiPcmKWbYp0wMyqgHXVe2",
+      "authorship_tag": "ABX9TyP4sES78n07Us+jpfxP5OZN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
         "id": "9rHbV8tKeGdo"
       },
       "source": [
-        "# Premier notebook: prise en main de python et premiers graphiques simples"
+        "# Premier notebook: prise en main de Python et premiers graphiques simples"
       ]
     },
     {
